# HDL_EDITOR_MVP

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hdl_editor/: __main__.py
tests/unit/: test_sample.py
